fixed alignment and responsiveness in enroute section

--- a/src/components/HomePage/Carousel/Enroute.css
+++ b/src/components/HomePage/Carousel/Enroute.css
@@ -4,19 +4,20 @@
    
     position: absolute;
     display: none;
-    top: auto;
+    /* top: auto; */
     right: 0;
-    bottom: 50px;
+    bottom: 40px;
     left: 0;
     margin: 0 auto;
     /* max-width: 500px; */
-    max-width: 1216px;
+    width: 100%;
+    max-width: 540px;
     /* border: 1px solid red;
     background: red; */
     display: flex !important;
     justify-content: start;
     align-items: center;
-    padding: 0px 12px;
+    /* padding: 0px 12px; */
 }
 
     
@@ -47,7 +48,7 @@
     background-size: cover;
 }
 
-@media only screen and (min-width: 1024px) {
+/* @media only screen and (min-width: 1024px) {
     .banner-slider2 .slick-slider.slick-initialized .slick-dots{
        padding:0px 112px;
        max-width: 1216px;
@@ -68,4 +69,25 @@
        
     }
     
+  } */
+
+  @media only screen and (min-width: 768px) {
+    .banner-slider2 .slick-slider.slick-initialized .slick-dots{
+        max-width:720px;
+        bottom: 60px;
+    }
+  }
+
+  @media only screen and (min-width: 1024px) {
+    .banner-slider2 .slick-slider.slick-initialized .slick-dots{
+        max-width:960px;
+        bottom: 80px;
+    }
+  }
+
+  @media only screen and (min-width: 1024px) {
+    .banner-slider2 .slick-slider.slick-initialized .slick-dots{
+      width: 100%;
+        max-width:1216px;
+    }
   }
